ダメージ時にRGBずらし、画面シェイク 演出強度がダメージ量によって変わるように

--- a/FL1.vcxproj
+++ b/FL1.vcxproj
@@ -277,6 +277,7 @@
     <ClCompile Include="class\Audio\SEPlayer.cpp" />
     <ClCompile Include="class\Effect\Particle\Child\SequenceParticle.cpp" />
     <ClCompile Include="class\GameObjects\Camera\Effect\Vignette\Vignette.cpp" />
+    <ClCompile Include="class\GameObjects\Camera\Effect\RGBShift\RGBShift.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\GameObjects\Camera\Effect\Blur\Blur.h" />
@@ -439,6 +440,7 @@
     <ClInclude Include="class\Effect\Bullet\Child\ExplosiveBulletEffect.h" />
     <ClInclude Include="class\Effect\Particle\Child\SequenceParticle.h" />
     <ClInclude Include="class\GameObjects\Camera\Effect\Vignette\Vignette.h" />
+    <ClInclude Include="class\GameObjects\Camera\Effect\RGBShift\RGBShift.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
