--- a/FL1.vcxproj.filters
+++ b/FL1.vcxproj.filters
@@ -396,6 +396,9 @@
     <ClCompile Include="class\GameObjects\Camera\Effect\Vignette\Vignette.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="class\Componets\BehaviourTree\BranchNode\TimeLimit.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="class\scene\TestScene.h">
@@ -876,6 +879,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="class\GameObjects\Camera\Effect\Vignette\Vignette.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="class\Componets\BehaviourTree\BranchNode\TimeLimit.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
